# Multimodal-compression

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: benchmark_config.yaml  clap_config.yaml  compression_config.yaml  dashboard_settings.yaml  finetune_config.yaml
notebooks/: demo.ipynb
src/compression/: __init__.py  compression.py  tvm_export.py
src/evaluation/: __init__.py  evaluation.py
src/framework/: cli.py  config.py  pipeline.py
src/models/: __init__.py  model.py
src/ui/: api.py  dashboard.py
tests/: test_compression.py  test_evaluation.py
